crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: tui/src/chat_screen/tests.rs
expression: blob
---
■ '/model' is disabled while a task is in progress.
