crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__exec_approval_history_decision_aborted_long.snap
---
source: tui/src/chat_screen/tests.rs
assertion_line: 495
expression: lines_to_single_string(&aborted_long)
---
✗ You canceled the request to run echo
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...
