crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui/src/chat_screen/tests.rs
expression: blob3
---
• Exploring
  └ List ls -la
    Read foo.txt
