crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: tui/src/chat_screen/tests.rs
expression: blob4
---
• Explored
  └ List ls -la
    Read foo.txt
