crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: tui/src/chat_screen/tests.rs
expression: blob5
---
• Explored
  └ List ls -la
    Read foo.txt
